# karlsruhe-zulassungsstelle-termin-bot

./: CLAUDE.md  PRODUCTION-SOLUTION.md  README.md  hacs.json  pyproject.toml  test_api.py  test_scraper.py
custom_components/karlsruhe_termin/: __init__.py  button.py  config_flow.py  const.py  coordinator.py  konsentas.py  manifest.json  sensor.py  strings.json
dev/: pyproject.toml  test_api.py  test_booking_endpoint.py  test_storno_endpoint.py
